src/modules/27-platform/connectors/components/ConnectorReferenceField/ConnectorReferenceField.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */
.item {
  .leftInfo {
    flex: 1;
    flex-shrink: unset !important;
    .connectorNameId {
      padding-left: var(--spacing-xsmall);
    }
  }
  .edit-btn {
    visibility: hidden;
  }
  .iconCheck {
    visibility: hidden;
    margin-right: var(--spacing-xsmall);
    cursor: pointer;
    align-self: center;

    > svg {
      > path {
        stroke-width: 1;
        stroke: var(--grey-500);
      }
    }
  }

  .iconChecked {
    visibility: visible !important;
    > svg {
      > path {
        stroke: var(--primary-7);
      }
    }
  }

  .favoriteStar {
    visibility: hidden;
    &.favoriteActive {
      visibility: visible;
    }
  }

  &:hover {
    .edit-btn {
      color: var(--grey-600) !important;
      visibility: visible;
    }
    .iconCheck {
      visibility: visible;
    }
    .favoriteStar {
      visibility: visible;
    }
  }
}

.connector-label {
  padding-bottom: var(--spacing-small);

  [data-test-id='connectorTooltip'] {
    margin-bottom: 5px;
  }
  :global {
    .bp3-icon-chevron-down {
      position: absolute;
      right: var(--spacing-8);
      opacity: 0.5;
      padding: var(--spacing-small) !important;
    }

    .TextInput--main {
      margin-bottom: 0px;
    }
  }
}
.status {
  align-items: center;
  display: flex;
  align-content: center;
  padding-right: var(--spacing-xsmall) !important;
  > svg {
    margin: auto;
  }

  /* for increased specificity */
  &.red-status:global(.bp3-icon) {
    color: var(--red-500) !important;
  }

  /* for increased specificity */
  &.green-status:global(.bp3-icon) {
    color: var(--green-500) !important;
  }
}

.right-status {
  display: flex;
  right: 60px;
  position: absolute;

  #tag {
    text-transform: uppercase;
    background-color: var(--grey-50) !important;
    color: var(--primary-9) !important;
  }
}
.label {
  max-width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap !important;
}
.selectWrapper {
  width: 100%;
  :global {
    .bp3-popover-wrapper {
      max-width: calc(100% - 140px);
      align-items: center;
      display: flex;
    }
    .bp3-popover-target {
      max-width: 100%;
    }
  }
}
.noDataCardContainerConnector {
  height: 100% !important;
}
.noDataCardContainerContent {
  margin-top: 0px !important;
}
.gitInfo {
  background: var(--grey-100) !important;
  border-radius: 8px !important;
  .gitDetailMaxWidth {
    max-width: 150px;
  }
  .gitBranchIcon {
    padding-left: var(--spacing-small) !important;
    border-left: 1px var(--grey-600) solid;
  }
}

.connectorDetails {
  min-height: 70px;

  .gitHubConnectorDetails {
    display: grid !important;
    grid-template-columns: 150px 300px 100px;
    grid-column-gap: 15px;
    .gitUrlStyle {
      width: 300px;
      font-size: var(--font-size-small);
      max-width: 300px;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }
    .gitUrl {
      width: 300px;
    }
  }

  .flexOne {
    flex: 1;
  }
  .flexTwo {
    flex: 2;
  }
}
.gitUrlStyleInPopover {
  width: 177px;
  font-size: var(--font-size-small);
  max-width: 177px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.detailsContainer {
  min-height: 130px;
  max-height: 300px;
}
.selectedPopover {
  :global {
    .bp3-popover-content {
      border-radius: 4px !important;
    }
  }
}
.selectedConnector {
  cursor: pointer;
}

.mini {
  min-height: 0;

  :global {
    [data-test-id='connectorTooltip'] {
      margin-bottom: 0 !important;
    }
    .MultiTypeInput--btn {
      &:before {
        height: 21px !important;
        border-right: none !important;
      }
      height: 22px !important;
    }
    .bp3-button {
      min-height: var(--spacing-7) !important;
      height: var(--spacing-7) !important;
    }
  }
  input[type='text'],
  :global(.bp3-input) {
    height: var(--spacing-7);
  }
}

